[gd_scene load_steps=11 format=3 uid="uid://dgad848hh2h4x"]

[ext_resource type="Script" uid="uid://cmppkfgala6id" path="res://Script/door.gd" id="1_8lahk"]
[ext_resource type="Texture2D" uid="uid://c3ij6wmtpayat" path="res://Asset/doorMat.jpg" id="2_eelqf"]
[ext_resource type="AudioStream" uid="uid://0ubkgxb7exfg" path="res://Music/open-door-sound-247415.ogg" id="3_24fpf"]
[ext_resource type="AudioStream" uid="uid://bka6h88u224sl" path="res://Music/heavy-breathing-14431.ogg" id="4_iq5sj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24fpf"]
atlas = ExtResource("2_eelqf")
region = Rect2(0, 0, 14, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_4cuvw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24fpf")
}],
"loop": true,
"name": &"doorOpen",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20v3j"]
size = Vector2(14, 5)

[sub_resource type="Animation" id="Animation_lr4tc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cdd6m"]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.193031, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm7vc"]
_data = {
&"RESET": SubResource("Animation_lr4tc"),
&"transition": SubResource("Animation_cdd6m")
}

[node name="doorMat" type="Area2D"]
script = ExtResource("1_8lahk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4cuvw")
animation = &"doorOpen"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource("RectangleShape2D_20v3j")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qm7vc")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 659.0
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_24fpf")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_iq5sj")
volume_db = 11.5
max_distance = 76.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
